Write SignuphandlerTest